unpackaged/main/default/objects/CampaignMember/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Account_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>