unpackaged/main/default/objects/CampaignMember/fields/BDR_Added_to_Gong_Workflow__c.field-meta.xml
<CustomField>
    <fullName>BDR_Added_to_Gong_Workflow__c</fullName>
    <formula>IF(
    AND(
      NOT(
        ISNULL(Contact.BDR_Added_to_Gong_Workflow__c)
      ),
      OR(
        AND(
          NOT(
            ISNULL(Lead.BDR_Added_to_Gong_Workflow__c)
          ),
          Contact.BDR_Added_to_Gong_Workflow__c &gt; Lead.BDR_Added_to_Gong_Workflow__c
        ),
        ISNULL(Lead.BDR_Added_to_Gong_Workflow__c)
      )
    ),  
  Contact.BDR_Added_to_Gong_Workflow__c,
  Lead.BDR_Added_to_Gong_Workflow__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDR Added to Gong Workflow</label>
    <type>DateTime</type>
</CustomField>