unpackaged/main/default/objects/CampaignMember/fields/Named_Account__c.field-meta.xml
<CustomField>
    <fullName>Named_Account__c</fullName>
    <formula>IF 
(
ContactId != &quot;&quot; , Contact.Account.Named_Account__c ,

IF(Lead.DE_Match_Account_Status__c = &#39;named&#39;, true, false)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Named Account</label>
    <type>Checkbox</type>
</CustomField>