unpackaged/main/default/objects/CampaignMember/fields/Named_Account_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Named_Account_Deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated to be removed</description>
    <label>Named Account[deprecated]</label>
    <type>Checkbox</type>
</CustomField>