unpackaged/main/default/objects/CampaignMember/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>If ( NOT(ISNULL(ContactId)),  Contact.Owner.UserRole.Name ,  

if (ISNULL( Lead.Owner:Queue.Id ), Lead.Owner:User.UserRole.Name,  Lead.Owner:Queue.QueueName  )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>