unpackaged/main/default/objects/CampaignMember/fields/Prospect_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Business_Unit__c</fullName>
    <formula>IF
(ContactId != &#39;&#39;, TEXT(Contact.Account.Account_Business_Unit__c),
TEXT(Lead.Solution_Line_Business_Unit__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Business Unit</label>
    <type>Text</type>
</CustomField>