unpackaged/main/default/objects/CampaignMember/fields/Prospect_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Intent_Score__c</fullName>
    <formula>IF(
NOT(ISBLANK( LeadId )),
Lead.X6sense_Contact_Intent_Score_Brightcove__c	 ,

IF(
NOT(ISBLANK( ContactId )),
Contact.x6sense_Contact_Intent_Score__c , 0
) /*INNER IFF*/

) /*OUTER IF*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Intent Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>