unpackaged/main/default/objects/CampaignMember/fields/Prospect_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lead_Source__c</fullName>
    <description>This formula is created to address: https://ideas.salesforce.com/s/idea/a0B8W00000GdY9XUAV/lead-source-should-be-an-available-field-in-reports-on-campaign-members</description>
    <formula>IF(ISBLANK(ContactId), TEXT(Lead.LeadSource), TEXT(Contact.LeadSource))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Lead Source</label>
    <type>Text</type>
</CustomField>