unpackaged/main/default/objects/CampaignMember/fields/Prospect_Revenue_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Revenue_Bucket__c</fullName>
    <formula>CASE( Prospect_Revenue_Range__c ,
&quot;$500M - $1B&quot;, &quot;Enterprise&quot;,
&quot;$1B - $2.5B&quot;, &quot;Enterprise&quot;,
&quot;$2.5B - $5B&quot;, &quot;Enterprise&quot;,
&quot;$5B+&quot;, &quot;Enterprise&quot;,
&quot;Over $500M&quot;, &quot;Enterprise&quot;,
&quot;$500M - 1B&quot;, &quot;Enterprise&quot;,
&quot;$1 - 10B&quot;, &quot;Enterprise&quot;,
&quot;$1 bil. - $5 bil.&quot;, &quot;Enterprise&quot;,
&quot;Over $5 bil.&quot;, &quot;Enterprise&quot;,
&quot;$500 mil. - $1 bil.&quot;, &quot;Enterprise&quot;,
&quot;10B&quot;, &quot;Enterprise&quot;,
&quot;$10M - $25M&quot;, &quot;Commercial&quot;,
&quot;$5M - $10M&quot;, &quot;Commercial&quot;,
&quot;$10M - $25M&quot;, &quot;Commercial&quot;,
&quot;$25M - $50M&quot;, &quot;Commercial&quot;,
&quot;$1M - $5M&quot;, &quot;Commercial&quot;,
&quot;$1 - 10M&quot;, &quot;Commercial&quot;,
&quot;$10 - 50M&quot;, &quot;Commercial&quot;,
&quot;$0 - 50M&quot;, &quot;Commercial&quot;,
&quot;$50 mil. - $100 mil.&quot;, &quot;Commercial&quot;,
&quot;$25 mil. - $50 mil.&quot;, &quot;Commercial&quot;,
&quot;$10 mil. - $25 mil.&quot;, &quot;Commercial&quot;,
&quot;$5 mil. - $10 mil.&quot;, &quot;Commercial&quot;,
&quot;$50M - $100M&quot;, &quot;Mid-Market&quot;,
&quot;$100M - $250M&quot;, &quot;Mid-Market&quot;,
&quot;$250M - $500M&quot;, &quot;Mid-Market&quot;,
&quot;$50 - 500M&quot;, &quot;Mid-Market&quot;,
&quot;$100 - 250M&quot;, &quot;Mid-Market&quot;,
&quot;$250 - 500M&quot;, &quot;Mid-Market&quot;,
&quot;$50 - 100M&quot;, &quot;Mid-Market&quot;,
&quot;$100 mil. - $250 mil.&quot;, &quot;Mid-Market&quot;,
&quot;$250 mil. - $500 mil.&quot;, &quot;Mid-Market&quot;,
&quot;No Revenue&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Revenue Bucket</label>
    <type>Text</type>
</CustomField>