unpackaged/main/default/objects/CampaignMember/fields/Prospect_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Revenue_Range__c</fullName>
    <formula>IF ( ISBLANK( LeadId ),IF( NOT(ISBLANK( Contact.Account.ZoomInfo_Revenue__c )), Contact.Account.ZoomInfo_Revenue__c,IF(NOT(ISBLANK( Contact.Revenue_Range_6sense__c )),Contact.Revenue_Range_6sense__c, Contact.ZoomInfo_Revenue__c )),Lead.ZoomInfo_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Revenue Range</label>
    <type>Text</type>
</CustomField>