unpackaged/main/default/objects/CampaignMember/fields/Prospect_Routing_Country__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Routing_Country__c</fullName>
    <formula>IF ( ISBLANK( LeadId ) , Contact.Account.BillingCountry, Lead.Country )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Routing Country</label>
    <type>Text</type>
</CustomField>