unpackaged/main/default/objects/CampaignMember/fields/Prospect_Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Sales_Division__c</fullName>
    <formula>IF(ISBLANK(ContactId), Lead.Sales_Division_Contact__c, Contact.Sales_Division_Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Sales Division</label>
    <type>Text</type>
</CustomField>