unpackaged/main/default/objects/CampaignMember/fields/Prospect_Solution_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Solution_Use_Case__c</fullName>
    <formula>IF
(
ContactId &lt;&gt; NULL,
TEXT( Contact.Solution_Use_Case__c ),
TEXT( Lead.Solution_Use_Case__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Solution Use Case</label>
    <type>Text</type>
</CustomField>