unpackaged/main/default/objects/CampaignMember/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <formula>IF
(
NOT( ContactId = &quot;&quot; ),
TEXT( Contact.Stage__c ),
TEXT( Lead.Stage__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Stage</label>
    <type>Text</type>
</CustomField>