unpackaged/main/default/objects/CampaignMember/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>