unpackaged/main/default/objects/CampaignMember/fields/Response_Landing_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Response_Landing_Page_Name__c</fullName>
    <label>Response Landing Page Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>