unpackaged/main/default/objects/CampaignMember/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>This field captures additional data needed for tracking
purposes.</description>
    <label>UTM Content</label>
    <length>50</length>
    <type>Text</type>
</CustomField>