unpackaged/main/default/objects/CampaignMember/fields/UTM_ID__c.field-meta.xml
<CustomField>
    <fullName>UTM_ID__c</fullName>
    <label>UTM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>