unpackaged/main/default/objects/CampaignMember/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>This field captures the tactic of the interaction.</description>
    <label>UTM Medium</label>
    <length>50</length>
    <type>Text</type>
</CustomField>