unpackaged/main/default/objects/CampaignMember/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>This field captures the channel of the interaction.</description>
    <label>UTM Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>