unpackaged/main/default/objects/CampaignMember/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <description>Captures terms used in Google Ads or SEM.</description>
    <label>UTM Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>